<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <RelativeLayout
        android:id="@+id/relative_returnback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        tools:ignore="MissingConstraints">
        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@null"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/image_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_returnback"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/connexion_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:text="@string/inscription"
            android:textAlignment="center"
            android:textColor="@color/connexion"
            android:textSize="25sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_textview"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            android:hint="@string/full_name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopStart="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="@dimen/space"
                android:backgroundTint="@color/connexion"
                app:backgroundTint="@color/connexion"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            android:hint="@string/adresse_email"
            android:layout_below="@+id/text_fullname"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopStart="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="@dimen/space"
                android:backgroundTint="@color/connexion"
                app:backgroundTint="@color/connexion"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_email_input"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="20dp"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopStart="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:backgroundTint="@color/connexion"
                app:backgroundTint="@color/connexion"
                android:drawablePadding="@dimen/space"
                android:drawableStart="@drawable/ic_baseline_lock_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_confir_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_password"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true"
            android:hint="@string/confirm_password"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopStart="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirme_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:backgroundTint="@color/connexion"
                app:backgroundTint="@color/connexion"
                android:drawablePadding="@dimen/space"
                android:drawableStart="@drawable/ic_baseline_lock_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/inscription_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_confir_password"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_button_connexion"
            android:text="@string/inscription"
            app:backgroundTint="@color/connexion" />

        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:layout_below="@+id/inscription_button"
            android:text="@string/have_account"
            android:textSize="16sp"/>
    </RelativeLayout>

</RelativeLayout>