<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/relative_returnback"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        tools:ignore="MissingConstraints">
        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@null"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/image_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_returnback"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_textview"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:hintAnimationEnabled="true"
            android:hint="@string/adresse_email"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopStart="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="@dimen/space"
                android:backgroundTint="@color/connexion"
                app:backgroundTint="@color/connexion"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/connexion_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/text_email_input"
            android:layout_marginStart="20dp"
            android:background="@drawable/round_button_connexion"
            app:backgroundTint="@color/connexion"
            android:layout_marginEnd="20dp"
            android:text="@string/s_authentifier"/>

        <TextView
            android:id="@+id/login_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/connexion_button"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/se_connecter"
            android:textAlignment="textEnd"
            android:textSize="20sp" />
    </RelativeLayout>
</RelativeLayout>